# Edouard-FRANCOIS-Projects

C++_3D_Game/: .gitignore  CMakeLists.txt  Makefile  conf.json  null.d
C++_3D_Game/assets/: grass  indie_bomberman_model_1.iqm  indie_bomberman_walk_animation.iqm  walkanimation2.iqm
C++_3D_Game/include/Entity/IA/: IA.hpp
C++_3D_Game/include/Entity/Player/: Player.hpp
C++_3D_Game/include/Game/: BombUp.cpp
C++_3D_Game/include/Graphic/: Graphic.hpp  Menu.hpp
C++_3D_Game/include/Graphic/MyRaylib/: Animation.hpp  Camera.hpp  Model.hpp  Music.hpp  MyRaylib.hpp  Rectangle.hpp  Text.hpp  Texture.hpp  Touch.hpp
C++_3D_Game/include/Indi/: BombDetonation.hpp  Indi.hpp  JsonData.hpp  Timer.hpp
C++_3D_Game/include/Map/: ManageIa.hpp  MapPiece.hpp
C++_3D_Game/include/Object/: StaticElem.hpp
C++_3D_Game/include/interface/: IAll.hpp  IDisplay.hpp  IEntity.hpp  IObject.hpp
C++_3D_Game/include/util/: exeption.hpp
C++_3D_Game/jsonlib/: Makefile
C++_3D_Game/jsonlib/constant/: .src.mk
C++_3D_Game/jsonlib/include/: Json.hpp
C++_3D_Game/jsonlib/include/Exeption/: JsExeption.hpp
C++_3D_Game/jsonlib/src/: Dump.cpp  Json.cpp  Parc.cpp
C++_3D_Game/oldMakefile/: Makefile
C++_3D_Game/src/: StaticElem.cpp  debug.cpp  main.cpp
C++_3D_Game/src/Entity/: Entity.cpp
C++_3D_Game/src/Entity/IA/: FindFistTime.cpp  FindInSafeZone.cpp  FindNotInSafeZone.cpp  FindPath.cpp  IA.cpp  ManageIa.cpp  Objectif.cpp
C++_3D_Game/src/Entity/Player/: Player.cpp
C++_3D_Game/src/Indi/: BombDetonation.cpp  InitJson.cpp  InitMap.cpp  MovePlayer.cpp
C++_3D_Game/src/Map/: MaPiece.cpp
C++_3D_Game/src/graphic/: Graphic.cpp  Menu.cpp
C++_3D_Game/src/graphic/MyRaylib/: Animation.cpp  Camera.cpp  Model.cpp  Music.cpp  MyRaylib.cpp  Rectangle.cpp  Text.cpp  Texture.cpp  Touch.cpp
C++_Game_Network/: CMakeLists.txt  Dockerfile  docker-compose.yaml  open_doc.sh  r-type_Unitest  readme.md
C++_Game_Network/Doxygen-Generator/html/: _al_resource_8hpp_source.html  _asset_8hpp_source.html  _audio_2_export_8hpp_source.html  _audio_8hpp_source.html  _blend_mode_8hpp_source.html  _circle_shape_8hpp_source.html  _clipboard_8hpp_source.html  _clock_8hpp_source.html  _color_8hpp_source.html  _config_8hpp_source.html  _context_8hpp_source.html  _context_settings_8hpp_source.html  _convex_shape_8hpp_source.html  _cursor_8hpp_source.html  _drawable_8hpp_source.html  _entity_8hpp_source.html  _entity_id_8hpp_source.html  _err_8hpp_source.html  _event_8hpp_source.html  _factory_monster_8hpp_source.html  _file_input_stream_8hpp_source.html  _font_8hpp_source.html  _frame_8hpp_source.html  _ftp_8hpp_source.html  _game_8hpp_source.html  _game_management_8hpp_source.html  _game_manager_8hpp_source.html  _gl_resource_8hpp_source.html  _glsl_8hpp_source.html  _glyph_8hpp_source.html  _gpu_preference_8hpp.html  _gpu_preference_8hpp__incl.map  _gpu_preference_8hpp__incl.md5  _gpu_preference_8hpp_source.html  _graphics_2_export_8hpp_source.html  _graphics_8hpp_source.html  _handle_server_8hpp_source.html  _handle_uuid_8hpp_source.html  _http_8hpp_source.html  _i_socket_8hpp_source.html  (+957 more)
C++_Game_Network/Doxygen-Generator/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  (+112 more)
C++_Game_Network/Doxygen-Generator/latex/: _gpu_preference_8hpp.tex  _gpu_preference_8hpp.tex.tmp  _gpu_preference_8hpp__incl.dot  annotated.tex  class_asset.tex  class_entity.tex  class_factory_monster.tex  class_frame.tex  class_game.tex  class_game_management.tex  class_game_manager.tex  class_handle_server.tex  class_handle_uuid.tex  class_lobby.tex  class_lobby_packet.tex  class_main_lobby.tex  class_manage___asset.tex  class_manage_registry.tex  class_manage_wall.tex  class_my_display.tex  class_networks_1_1_client.tex  class_networks_1_1_client__coll__graph.dot  class_networks_1_1_i_socket.tex  class_networks_1_1_i_socket__inherit__graph.dot  class_networks_1_1_select.tex  class_networks_1_1_select__inherit__graph.dot  class_networks_1_1_serveur.tex  class_networks_1_1_serveur__coll__graph.dot  class_one_packet_queue.tex  class_one_packet_queue__coll__graph.dot  class_one_queu.tex  class_particule.tex  class_pick_ups_1_1_pick_ups.tex  class_player.tex  class_send_packet.tex  class_socket_exeption_1_1_bind_error.tex  class_socket_exeption_1_1_bind_error__coll__graph.dot  class_socket_exeption_1_1_bind_error__inherit__graph.dot  class_socket_exeption_1_1_exeption.tex  class_socket_exeption_1_1_exeption__coll__graph.dot  (+249 more)
C++_Game_Network/assets/sounds_effects/: mySoundManager.hpp
C++_Game_Network/boostrap/: ECS_TUTO.md  SparseArray.hpp  bat_test.cpp  boostrap.cpp  boostrap.hpp  ecs_TEST  graphic.cpp  make.sh  make_step3.sh  step3.cpp  step3.hpp  testchrono.cpp
C++_Game_Network/boostrap/button_text_degreemoove/: animation.cpp  button.hpp  degree.cpp  doc.txt  main.cpp  texbox.hpp
C++_Game_Network/boostrap/tst_ECS/: components.hpp  create_entity.cpp  create_register.cpp  main.cpp  texture_array.cpp
C++_Game_Network/cmake_modules/: FindSFML.cmake  FindUUID.cmake
C++_Game_Network/doc/: Doxyfile  Sending protocol.md  cmake.md  organisation.md  protocol-v1.md  protocol.md
C++_Game_Network/src/client/: Makefile
C++_Game_Network/src/client/include/: Client.hpp  GameManager.hpp  Lobby.hpp  Particule.hpp  Player.hpp  buttonFunc.hpp  client_paquet_sender.hpp
C++_Game_Network/src/client/src/: CMakeLists.txt  GameManager.cpp  Lobby.cpp  ManageMessageFromServer.cpp  (+3 more)
C++_Game_Network/src/res/: Packet.hpp
C++_Game_Network/src/shared/: EntityId.hpp  FactoryMonster.cpp  FactoryMonster.hpp  Frame.hpp  HandleServer.cpp  HandleServer.hpp  HandleUuid.hpp  SendPacket.hpp  createPlayer.cpp
C++_Game_Network/tst/: CMakeLists.txt
(+78 files in other folders)
